--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                   <li><a class="dropdown-item" href="sdk/rust.html">Rust</a></li>
                   <li><a class="dropdown-item" href="sdk/go.html">Go</a></li>
                   <li><a class="dropdown-item" href="sdk/nodejs.html">NodeJS</a></li>
+                  <li><a class="dropdown-item" href="sdk/java.html">Java</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -60,6 +61,7 @@
                   <li><a class="dropdown-item" href="ri/rust-sdk.html">Rust</a></li>
                   <li><a class="dropdown-item" href="ri/go-sdk.html">Go</a></li>
                   <li><a class="dropdown-item" href="ri/nodejs-sdk.html">NodeJS</a></li>
+                  <li><a class="dropdown-item" href="ri/java-sdk.html">Java</a></li>
                 </ul>
               </li>
             </ul>
@@ -207,6 +209,15 @@
             ODA Component SDK<br />
             ODA Canvas SDK</p>
             <p><a class="btn btn-secondary btn-lg btn-custom" href="sdk/python.html">View details &raquo;</a></p>
+          </div><!-- /.col-lg-3 -->
+          <div class="col-lg-3 text-center">
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="img/javaspring.png" alt="Java SDK">
+
+            <h2>Java SDKs</h2>
+            <p>Open API SDK<br />
+            ODA Component SDK<br />
+            ODA Canvas SDK</p>
+            <p><a class="btn btn-secondary btn-lg btn-custom" href="sdk/java.html">View details &raquo;</a></p>
           </div><!-- /.col-lg-3 -->
         </div><!-- /.row -->
 
