--- a/sdk/go.html
+++ b/sdk/go.html
@@ -47,6 +47,7 @@
                   <li><a class="dropdown-item" href="rust.html">Rust</a></li>
                   <li><a class="dropdown-item" href="go.html">Go</a></li>
                   <li><a class="dropdown-item" href="nodejs.html">NodeJS</a></li>
+                  <li><a class="dropdown-item" href="java.html">Java</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -60,6 +61,7 @@
                   <li><a class="dropdown-item" href="../ri/rust.html">Rust</a></li>
                   <li><a class="dropdown-item" href="../ri/go.html">Go</a></li>
                   <li><a class="dropdown-item" href="../ri/nodejs.html">NodeJS</a></li>
+                  <li><a class="dropdown-item" href="../ri/java.html">Java</a></li>
                 </ul>
               </li>
             </ul>
