--- a/sdk/java.html
+++ b/sdk/java.html
@@ -58,9 +58,9 @@
                   RIs
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLinkRIs">
-                  <li><a class="dropdown-item" href="../ri/rust.html">Rust</a></li>
-                  <li><a class="dropdown-item" href="../ri/go.html">Go</a></li>
-                  <li><a class="dropdown-item" href="../ri/nodejs.html">NodeJS</a></li>
+                  <li><a class="dropdown-item" href="../ri/rust-sdk.html">Rust</a></li>
+                  <li><a class="dropdown-item" href="../ri/go-sdk.html">Go</a></li>
+                  <li><a class="dropdown-item" href="../ri/nodejs-sdk.html">NodeJS</a></li>
                   <li><a class="dropdown-item" href="../ri/java.html">Java</a></li>
                 </ul>
               </li>
@@ -99,13 +99,13 @@
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="https://www.oda-components.org">Home</a></li>
             <li class="breadcrumb-item">SDKs</li>
-            <li class="breadcrumb-item active" aria-current="page">NodeJS SDK</li>
+            <li class="breadcrumb-item active" aria-current="page">Java SDK</li>
           </ol>
         </nav>
 
         <!-- START THE FEATURETTES -->
 
-        <h2 class="featurette-heading custom-h2">NodeJS <span class="text-muted">SDK</span></h2>
+        <h2 class="featurette-heading custom-h2">Java Spring Boot <span class="text-muted">SDK</span></h2>
 
         <hr class="featurette-divider">
 
@@ -113,45 +113,29 @@
           <div class="col-md-7">
 
             <p class="lead">
-              Node.js is an open-source, cross-platform JavaScript runtime environment that allows developers to execute JavaScript code outside of a web browser. It is built on the V8 JavaScript runtime engine, which is the same engine that powers the Google Chrome browser. Node.js enables server-side and network application development, making it a popular choice for building scalable and high-performance applications. Here are some key characteristics and features of Node.js:
+              Spring Boot is an open-source framework built on top of Java and Spring Framework. Built on top of the popular Spring Framework, Spring Boot simplifies Java application development. Some key features and characteristics of the Sprng Boot:
             </p>
             <p class="lead">
-              JavaScript on the Server: Node.js allows developers to use JavaScript for both client-side and server-side development. This enables a more unified development experience and easier sharing of code between the server and the client.
+              Auto-Configuration: Saves you time by automatically configuring your application based on the libraries you include (e.g., Spring Data JPA for database access).
             </p>
             <p class="lead">
-              Event-Driven and Asynchronous: Node.js is designed to be event-driven and asynchronous, using a non-blocking I/O model. This means that it can handle many concurrent connections efficiently without the need for multi-threading.
+              Standalone Applications: Spring Boot applications are self-contained, eliminating the need for a separate application server like Tomcat. This makes them ideal for microservices architectures.
             </p>
             <p class="lead">
-              Single-Threaded, Non-Blocking I/O: While Node.js is single-threaded, it uses an event loop to handle multiple requests concurrently. This non-blocking I/O model allows Node.js to efficiently manage a large number of connections simultaneously.
+              Production-Ready: Includes features like metrics, health checks, and security out of the box, ensuring your application is ready for deployment.
             </p>
             <p class="lead">
-              NPM (Node Package Manager): NPM is the default package manager for Node.js, providing a vast ecosystem of open-source libraries and tools that developers can easily integrate into their projects.
+              Opinionated Defaults: Provides sensible defaults for many configurations, saving you time and promoting consistency across projects.
             </p>
             <p class="lead">
-              V8 JavaScript Engine: Node.js is built on the V8 JavaScript engine, which is known for its high performance. V8 compiles JavaScript code to machine code, allowing Node.js applications to run quickly.
+              Simplified Testing: Offers built-in support for easier unit and integration testing.
             </p>
             <p class="lead">
-              Modules and Package Management: Node.js uses a module system that allows developers to organize their code into reusable and shareable components. NPM facilitates easy installation and management of third-party libraries and tools.
+              Extensive Ecosystem: Leverages the vast Spring ecosystem of libraries and modules for various functionalities.              
             </p>
-            <p class="lead">
-              Scalability: Node.js is well-suited for building scalable applications due to its event-driven architecture. It can handle a large number of concurrent connections efficiently, making it suitable for real-time applications and microservices architectures.
-            </p>
-            <p class="lead">
-              Community and Ecosystem: Node.js has a large and active community, contributing to its rich ecosystem of modules and tools. This community-driven development has led to the creation of a wide range of libraries and frameworks that extend the functionality of Node.js.
-            </p>
-            <p class="lead">
-              Cross-Platform: Node.js is cross-platform and can run on various operating systems, including Windows, macOS, and Linux.
-            </p>
-            <p class="lead">
-              Use Cases: Node.js is commonly used for developing web applications, RESTful APIs, real-time applications (such as chat applications and online gaming), and server-side applications.
-            </p>
-            <p class="lead">
-              Node.js has gained widespread adoption and is used by many companies for building scalable and efficient server-side applications. It has become a popular choice for modern web development due to its performance, scalability, and the ability to use JavaScript on both the client and server sides.
-            </p>
-
           </div>
           <div class="col-md-5">
-            <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="../img/NodeJS.svg" alt="ODA NodeJS SDK">
+            <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="../img/javaspring.png" alt="ODA Rust SDK">
           </div>
         </div>
 
@@ -164,7 +148,7 @@
       <!-- FOOTER -->
       <footer class="container">
         <p class="float-end"><a href="#">Back to top</a></p>
-        <p>&copy; 2023 Open Digital Architecture &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2024 Open Digital Architecture &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
     </main>
 
